# xvideos_api

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: async-tests.yml  sync-tests.yml  tests.yml
README/: Changelog.md  Documentation.md
xvideos_api/: __init__.py  xvideos_api.py
xvideos_api/modules/: consts.py  download.py  errors.py  exceptions.py  locals.py  progress_bars.py  sorting.py
xvideos_api/tests/: conftest.py  test_download.py  test_pornstar.py  test_search.py  test_video.py
