[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xvideos_api"
version = "1.6.4"
description = "A Python API for the Porn Site xvideos.com"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "LGPLv3" }
authors = [
    { name = "Johannes Habel", email = "EchterAlsFake@proton.me" }
]
dependencies = [
    "bs4",
    "eaf_base_api",
    "httpx",
]
optional-dependencies = {av = ["av"], ffmpeg = ["ffmpeg-progress-yield"]}
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/EchterAlsFake/xvideos_api"

[project.scripts]
xvideos_api = "xvideos_api.xvideos_api:main"

[tool.setuptools]
packages = { find = {} }